# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_api_endpoints.py  test_course_search_tool.py  test_integration.py  test_rag_system.py  test_real_api.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh  quality.sh
